--- a/prueba-valid/src/main/resources/templates/index.html
+++ b/prueba-valid/src/main/resources/templates/index.html
@@ -2,19 +2,25 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body >
-    <form action="/new" method="POST">
-    	<label>Nombre:</label>
-    	<input name="name" type="text">
-    	<br>
-    	<label>Apellido:</label>
-    	<input name="lastName" type="text">
-    	<br>
-    	<label>Procesado:</label>
-    	<input value="false" disabled="disabled">
-    	<br>
-    	<button>Agregar</button>
-    </form>
+	<div class="d-flex justify-content-center m-5">
+		<h2> Agregar nuevo registro</h2>
+    </div>
+    <div class="d-flex justify-content-center m-5">
+	    <form action="/new" method="POST">
+	    	<div class="form-group">
+		    	<label>Nombre:</label>
+		    	<input name="name" type="text" class="form-control">
+		    	<label>Apellido:</label>
+		    	<input name="lastName" type="text" class="form-control">
+		    	<label>Procesado:</label>
+		    	<input value="false" disabled="disabled" class="form-control">
+		    	<br>
+		    	<button class="btn btn-primary btn-block">Agregar</button>
+	    	</div>
+	    </form>
+	</div>
 </body>
 </html>
