--- a/prueba-valid/src/main/resources/templates/persons.html
+++ b/prueba-valid/src/main/resources/templates/persons.html
@@ -2,31 +2,39 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body >
+	<div class="d-flex justify-content-center m-5">
+		<h2> Lista de personas</h2>
+    </div>
     <form action="/process" method="GET">
-	    <table id="persons">
-	    	<thead>
-	    		<tr>
-	    			<th></th>
-	    			<th>NOMBRE</th>
-	    			<th>APELLIDO</th>
-	    			<th>PROCESADO</th>
-	    		</tr>	
-	    	</thead>
-	    	<tbody>
-	    		<tr th:each="person: ${persons}">
-	    			<td> 
-	    				<input type="checkbox" name="processPerson" th:value="${person.id}">
-	    			</td>
-	    			<td th:text="${person.name}"/>
-	    			<td th:text="${person.lastName}"/>
-	    			<td th:text="${person.processed}"/>
-	    			<td/>
-	    		</tr>
-	    	</tbody>
-	    </table>
-	    <button>Procesar</button>
+	    <div class="row m-5">
+		    <table id="persons" class="table">
+		    	<thead>
+		    		<tr>
+		    			<th></th>
+		    			<th>NOMBRE</th>
+		    			<th>APELLIDO</th>
+		    			<th>PROCESADO</th>
+		    		</tr>	
+		    	</thead>
+		    	<tbody>
+		    		<tr th:each="person: ${persons}">
+		    			<td> 
+		    				<input type="checkbox" name="processPerson" th:value="${person.id}">
+		    			</td>
+		    			<td th:text="${person.name}"/>
+		    			<td th:text="${person.lastName}"/>
+		    			<td th:text="${person.processed}"/>
+		    			<td/>
+		    		</tr>
+		    	</tbody>
+		    </table>
+	    </div>
+	    <div class="row m-5">
+	    	<button class="btn btn-primary btn-block">Procesar</button>
+	    </div>
     </form>
 </body>
 </html>
